--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,12 @@
             <version>${junit.jupiter.version}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpcore</artifactId>
+            <version>4.4.6</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
