init commit branch EXAM_UI

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,3 +1,11 @@
-url=https://edujira.ifellow.ru/login.jsp
+jira.url=https://edujira.ifellow.ru/login.jsp
 login=AT1
 password=Qwerty123
+
+search.project.name = Test
+search.auth.done = System Dashboard
+
+task.status.done = \u0413\u041E\u0422\u041E\u0412\u041E
+
+task.status.next = \u0421\u0414\u0415\u041B\u0410\u0422\u042C
+task.fix.version = Version 2.0
